--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 <body>
   <div class="container">
     <header>
-      <div class="brand">Nexus • Job Platform API</div>
+      <div class="brand">Nexus_Project • Job Platform API</div>
       <span class="pill">Deployed on Render</span>
     </header>
 
@@ -59,7 +59,7 @@
     </section>
 
     <footer>
-      <p>© {{ year|default:2025 }} Nexus. Built with Django, DRF, and love.</p>
+      <p>© {{ year|default:2025 }} Nexus. Built with Django, DRF, and love. By <strong>Ochogwu Prince</strong></p>
     </footer>
   </div>
 </body>
